# nckh-face-recognize-api

./: README.md  pyproject.toml
src/face_recoginze_api/: app.py  dependencies.py
src/face_recoginze_api/database/: database.py  tables.py
src/face_recoginze_api/models/: response_message.py
src/face_recoginze_api/services/: face_recognize_service.py
